# mapsys-extractor

./: CHANGELOG.md  Makefile  README.md  README.ro.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: publish.yml  tests.yml
mapsys/: __main__.py  ar5_polys.py  as5_vertices.py  cli.py  content.py  dxf_colors.py  investigations.py  mdb_support.py  n05_points.py  te5_text_meta.py  to_dxf.py  ts5_text_store.py  xl.py
mapsys/dxf/: dxf_colors.py  to_dxf.py
mapsys/parser/: al5_poly_layer.py  ar5_polys.py  as5_vertices.py  content.py  mdb_support.py  n05_points.py  pr5_main.py  te5_text_meta.py  ts5_text_store.py
tests/: test_al5_poly_layer.py  test_ar5_polys.py  test_as5_vertices.py  test_cli_dxf_dir.py  test_cli_xlsx.py  test_cli_xlsx_dir.py  test_content.py  test_dxf_colors.py  test_mdb_support.py  test_n05_points.py  test_pr5_main.py  test_te5_text_meta.py  test_to_dxf.py  test_ts5_text_store.py  test_xl.py
